SERVER-71049 stop mongo_crypt shared library from logging to stdout when loaded

GitOrigin-RevId: 4b476c18c8083912a3a1ba2f6c9083d48015ee41